Dirty fix to prevent flickering navbar on page load

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -376,6 +376,10 @@ body.no-scroll {
       padding-left: 0;
       padding-right: 0;
       transition: background-color $transition-theme-duration $transition-theme-timing-function;
+
+      &.collapsing {
+        height: auto !important;
+      }
     }
   }
 
